
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {char* buffer; } ;


 int CPUINFO_KAISER ;
 int CPUINFO_PTI ;
 int CPUINFO_SMAP ;
 int CPUINFO_SMEP ;
 TYPE_1__ g_proc_reader ;
 char* memmem (char*,int,char*,int) ;
 int proc_read (TYPE_1__*,char*) ;

__attribute__((used)) static int cpuinfo_scan() {
 int length = proc_read(&g_proc_reader, "/proc/cpuinfo");
 char *buffer = &g_proc_reader.buffer[0];
 int rv = 0;
 char* found = memmem(buffer, length, "smep", 4);
 if (found != ((void*)0))
  rv |= CPUINFO_SMEP;
 found = memmem(buffer, length, "smap", 4);
 if (found != ((void*)0))
  rv |= CPUINFO_SMAP;
 found = memmem(buffer, length, "kaiser", 4);
 if (found != ((void*)0))
  rv |= CPUINFO_KAISER;
 found = memmem(buffer, length, " pti", 4);
 if (found != ((void*)0))
  rv |= CPUINFO_PTI;
 return rv;
}
