; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_cpuinfo_scan.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_cpuinfo_scan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@g_proc_reader = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@.str = private unnamed_addr constant [14 x i8] c"/proc/cpuinfo\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"smep\00", align 1
@CPUINFO_SMEP = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [5 x i8] c"smap\00", align 1
@CPUINFO_SMAP = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [7 x i8] c"kaiser\00", align 1
@CPUINFO_KAISER = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [5 x i8] c" pti\00", align 1
@CPUINFO_PTI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @cpuinfo_scan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cpuinfo_scan() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = call i32 @proc_read(%struct.TYPE_3__* @g_proc_reader, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 %5, i32* %1, align 4
  %6 = load i8*, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_proc_reader, i32 0, i32 0), align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  store i8* %7, i8** %2, align 8
  store i32 0, i32* %3, align 4
  %8 = load i8*, i8** %2, align 8
  %9 = load i32, i32* %1, align 4
  %10 = call i8* @memmem(i8* %8, i32 %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 4)
  store i8* %10, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %0
  %14 = load i32, i32* @CPUINFO_SMEP, align 4
  %15 = load i32, i32* %3, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %0
  %18 = load i8*, i8** %2, align 8
  %19 = load i32, i32* %1, align 4
  %20 = call i8* @memmem(i8* %18, i32 %19, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 4)
  store i8* %20, i8** %4, align 8
  %21 = load i8*, i8** %4, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %23, label %27

23:                                               ; preds = %17
  %24 = load i32, i32* @CPUINFO_SMAP, align 4
  %25 = load i32, i32* %3, align 4
  %26 = or i32 %25, %24
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %23, %17
  %28 = load i8*, i8** %2, align 8
  %29 = load i32, i32* %1, align 4
  %30 = call i8* @memmem(i8* %28, i32 %29, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i32 4)
  store i8* %30, i8** %4, align 8
  %31 = load i8*, i8** %4, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %33, label %37

33:                                               ; preds = %27
  %34 = load i32, i32* @CPUINFO_KAISER, align 4
  %35 = load i32, i32* %3, align 4
  %36 = or i32 %35, %34
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %33, %27
  %38 = load i8*, i8** %2, align 8
  %39 = load i32, i32* %1, align 4
  %40 = call i8* @memmem(i8* %38, i32 %39, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i32 4)
  store i8* %40, i8** %4, align 8
  %41 = load i8*, i8** %4, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %43, label %47

43:                                               ; preds = %37
  %44 = load i32, i32* @CPUINFO_PTI, align 4
  %45 = load i32, i32* %3, align 4
  %46 = or i32 %45, %44
  store i32 %46, i32* %3, align 4
  br label %47

47:                                               ; preds = %43, %37
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i32 @proc_read(%struct.TYPE_3__*, i8*) #1

declare dso_local i8* @memmem(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
